# tcp_server

./: .gitignore  Cargo.toml  LICENSE  README.md  tcp_socket_impl.md
client/: Cargo.toml
client/src/: http_methods.rs  http_request.rs  main.rs
doc/: client.md  http.md  http_codes.md  http_response.md  server.md
examples/: client.rs  server.rs
html/: 200.html
resources/html/: 200.html  404.html  index.html
resources/img/: attributions.md
resources/keys/: keys.toml
server/: Cargo.toml
server/src/: http.rs  http_response.rs  http_status.rs  main.rs  thread_pool.rs
src/: config.rs  main_client.rs  main_server.rs  server.rs  thread_pool.rs
