[package]
name = "tcp_server"
version = "0.1.1"
description = "A simple demonstration of a TCP server written in Rust. Shows the basic principles of creating a server and handling connections using the standard library."
edition = "2021"
authors = ["Reza Campos Fernando Bryan"]


[profile.dev]
opt-level = 0  # no optimization

[profile.release]
opt-level = 3  # fully optimized


[dependencies]
log = "0.*" # Logging (https://docs.rs/log/latest/log/)
dev_utils = "0.0.*" # Utilities for development (https://docs.rs/dev_utils/latest/dev_utils/)
# dev_utils = { path = "./../../dev_utils" }  # Use local version of dev_utils ( for development )
