[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Yrrrrrf"]

[dependencies]
log = "0.*" # Logging (https://docs.rs/log/latest/log/)
# dev_utils = "0.0.9" # Utilities for development (https://docs.rs/dev_utils/latest/dev_utils/)
dev_utils = { path = "./../../dev_utils" }  # Use local version of dev_utils ( for development )
